# p2p-chat

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  index.html  package-lock.json  package.json  rustfmt.toml  tsconfig.json
.github/workflows/: build.yml  rust.yml
docs/: README.md  code_analysis.md  code_walkthrough.md  design_document.md  tokio_async_guide.md
scripts/: build-windows.ps1
src/: App.svelte  api.rs  app.rs  connection.rs  event.rs  main.rs  message.rs  network.rs  node.rs  registry.rs  ui.rs  ui_tui.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api.rs  app.rs  bridge.rs  commands.rs  crypto.rs  history.rs  lib.rs  main.rs  net.rs  network.rs  node.rs  storage.rs
src/components/: ChatWindow.svelte  ConnectDialog.svelte  InputBar.svelte  MessageList.svelte  PeerList.svelte  Setup.svelte
src/lib/: api.ts  stores.ts
