[package]
name = "p2p-chat"
version = "0.1.0"
edition = "2021"
description = "A peer-to-peer chat application in Rust"
authors = ["Your Name <your.email@example.com>"]

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"
mio = { version = "1.0", features = ["net", "os-poll"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
ratatui = "0.29"
crossterm = { version = "0.28", features = ["event-stream"] }
futures = "0.3"

[dev-dependencies]
tokio-test = "0.4"