[package]
name = "p2p-chat"
version = "0.1.0"
edition = "2021"
description = "A peer-to-peer chat application"

[dependencies]
tokio = { version = "1.40", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"
anyhow = "1.0"
mio = { version = "1.0", features = ["net", "os-poll"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tauri = { version = "2", features = [] }
dirs = "6"
aes-gcm = "0.10"
pbkdf2 = { version = "0.12", features = ["simple"] }
sha2 = "0.10"
rand = "0.8"
base64 = "0.22"

[build-dependencies]
tauri-build = { version = "2", features = [] }
